<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:weightSum="1">
	<ListView
		android:id="@+id/nearby_list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" />
    <LinearLayout
        android:id="@+id/btn_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">
        <Button
            android:id="@+id/btn_update_location"
            android:text="@string/btn_update_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_map"
            android:text="@string/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_refresh"
            android:text="@string/btn_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
